<resources>
    <string name="app_name" translatable="false">Orari Sapienza</string>
    <string name="app_version">"App Version"</string>
    <string name="manufacturer">Manufacturer:</string>
    <string name="name_class_detail">Class detail</string>
    <string name="describe">Description</string>
    <string name="confirm">Confirm</string>
    <string name="error">Error</string>
    <string name="attachment_remove_question">Are you sure you want to remove the selected attachment?</string>
    <string name="gallery_permission_denied">Permission to access the gallery denied.</string>
    <string name="report_sent">Report sent!</string>
    <string name="feedback_not_sent">Feedback has not been sent</string>
    <string name="settings">Settings</string>
    <string name="select_issue_type">Select issue type</string>
    <string name="crash_freeze" translatable="false">Crash/Freeze</string>
    <string name="graphic_problem">Graphic issue</string>
    <string name="other">Other</string>
    <string name="select_frequency">Select frequency</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string-array name="issue_type">
        <item>@string/select_issue_type</item>
        <item>@string/crash_freeze</item>
        <item>@string/graphic_problem</item>
        <item>@string/other</item>
    </string-array>
    <string-array name="frequency_type">
        <item>@string/select_frequency</item>
        <item>@string/high</item>
        <item>@string/medium</item>
        <item>@string/low</item>
    </string-array>
    <string name="device_name">Device:</string>
    <string name="device_model">Model:</string>
    <string name="os_version">OS Version:</string>
    <string name="piano_di_studi">Study program</string>
    <string name="add_attachments">ATTACH FOTO</string>
    <string name="type_of_problem">Issue type</string>
    <string name="frequency">Frequency</string>
    <string name="tell_us_about_issue">Tell us about the issue you experienced using the app Orari Sapienza.</string>
    <string name="please_wait">Please wait ...</string>
    <string name="feedback_sent">Feedback sent!</string>
    <string name="sending_feedback">Sending feedback</string>
    <string name="sending_report">Sending report</string>
    <string name="report_not_sent">Report has not been sent</string>
    <string name="attachment_too_many">This is an error message, you have entered too many attachments!</string>
    <string name="attachment_remove">Attachment removal</string>
    <string name="faq" translatable="false">FAQ</string>
    <string name="study_plan_active">Active Study Program</string>
    <string name="classrooms_list">Classroom detail</string>
    <string name="contacts">Contacts</string>
    <string name="report_a_bug">Report a Bug</string>
    <string name="lets_start">LET\'S START</string>
    <string name="skip_tutorial">SKIP TUTORIAL</string>
    <string name="title_activity_settings">Settings</string>
    <string name="confirm_exit">Are you sure you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="confirm_plan_overriding">A Study program is still active, if you choose to create another one the past will be erased</string>
    <string name="theme_desc">Apply a dark theme throughout the app</string>
    <string name="theme_title">Dark Theme</string>
    <string name="sync_desc">By enabling this you will allow the app to auto sync itself.</string>
    <string name="sync_title">Automatically check for updates</string>
    <string name="lang_title">Current language</string>
    <string name="current_postion">Current position</string>
    <string name="animations_title">Show animations</string>
    <string name="exit_box_desc">Show confirm dialog before exiting.</string>
    <string name="exit_box_title">Confirm exit</string>
    <string name="notifications_title">Enable notifications</string>
    <string name="ringtone_title">Ringtone</string>
    <string name="ringtone_desc">Select a ringtone</string>
    <string name="vibration_title">Vibrate</string>
    <string name="animations_desc">Show animations during transitions</string>
    <string name="write_here_feedback">Write your feedback here</string>
    <string name="feedback" translatable="false">Feedback</string>
    <string name="cancel">Cancel</string>
    <string name="english">english</string>
    <string name="italian">italian</string>
    <string-array name="languages">
        <item name="english">@string/english</item>
        <item name="italiano">@string/italian</item>
    </string-array>
    <string-array name="languagesValues">
        <item name="english">en</item>
        <item name="italiano">it</item>
    </string-array>
    <string name="send_us_feedback">Send us a Feedback</string>
    <string name="write_here_your_feedback">In this section you can tell us your opinions/comments. We value your feedback to improve this app even better.</string>
    <string name="tell_us_what_you_think">Tell us what you think</string>
    <string name="nome_optional">Name (optional)</string>
    <string name="email_optional">E-mail address (optional)</string>
    <string name="bug" translatable="false">Bug</string>
    <string name="authors">Authors</string>
    <string name="base_theme">Base Theme</string>
    <string name="general">General</string>
    <string name="notifications">Notifications</string>
    <string name="about">About</string>
    <string name="infinity" translatable="false">&#8734;</string>
    <string name="location_not_allowed">(GPS not allowed)</string>
    <string name="location_not_active">(GPS not active)</string>
    <string name="gps_service_inactive">GPS service is not active</string>
    <string name="open_settings">Open in Settings</string>
    <string name="time_and_location">TIME + LOCATION</string>
    <string name="allow">Allow</string>
    <string name="active">Active</string>
    <string name="all">All</string>
    <string name="busy_only">Busy only</string>
    <string name="vacant_only">Vacant only</string>
    <string name="availability">AVAILABILITY</string>
    <string name="fri">Fri</string>
    <string name="thu">Thu</string>
    <string name="wed">Wed</string>
    <string name="tue">Tue</string>
    <string name="mon">Mon</string>
    <string name="day">DAY</string>
    <string name="filters">Filters</string>
    <string name="time">Time</string>
    <string name="distance">Distance</string>
    <string name="up_to">up to</string>
    <string name="apply">apply</string>
    <string name="image">Image</string>
    <string name="favourite_classroom">Favourite classes</string>
    <string name="class_status" translatable="false">class_status</string>
    <string name="leonardo_emili" translatable="false">Leonardo Emili</string>
    <string name="fabio_capirchio" translatable="false">Fabio Capirchio</string>
    <string name="lessons_timetable">Lessons timetables</string>
    <string name="timetables">Timetables</string>
    <string name="timetables_help_msg">To start seeing for a lesson timetable click x in the upper right part of the screen.</string>
    <string name="course_code">Course code</string>
    <string name="time_course">Time</string>
    <string name="lesson">Course</string>
    <string name="classroom">Class</string>
    <string name="favourites">Favourites</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="_course">Course:</string>
    <string name="_time">Time:</string>
    <string name="updating">Updating data…</string>
    <string name="updating_turn_on_connection">"Updating data…\nCheck that you have enabled Internet connection"</string>
    <string name="data_not_sync_wait_please">Data is not sync.\nWait please.</string>
    <string name="from_">From</string>
    <string name="to_">To</string>
    <string name="where_to_study">Where to study?</string>
    <string name="set_study_time">SET STUDY TIME</string>
    <string name="use_current_gps_pos">Use current GPS position</string>
    <string name="your_position">Your position</string>
    <string name="create_plan">Create program</string>
    <string name="place_not_selected">No place selected, by default Sapienza Campus will considered as place of study.</string>
    <string name="ok" translatable="false">OK</string>
    <string name="_no" translatable="false">No</string>
    <string name="study_plan">Study program</string>
    <string name="save_it">Save it</string>
    <string name="from">from</string>
    <string name="_from">"from "</string>
    <string name="_up_to_">" up to "</string>
    <string name="_special_" translatable="false">" - "</string>
    <string name="study_plan_corrupt">Your Study Program is corrupted. It can\'t be used in app</string>
    <string name="query_example">For example Aula P1 …</string>
    <string name="whooops" translatable="false">WHOOOPS!</string>
    <string name="no_internet_connection">NO INTERNET CONNECTION</string>
    <string name="enable_it_for_a_more_accurate_study_plan_calculation">Enable it for a more accurate Study program calculation.</string>
    <string name="active_study_plan">Current program</string>
    <string name="you_haven_t_created_a_study_plan_yet">You haven\'t created a study program yet</string>
    <string name="you_can_do_it_by_going_back_to_previous_page_and_then_tap_on_study_plan">You can do it by going back to previous page and create your custom profile at Study program</string>
    <string name="study_plan_created">Your Study program has been successfully created!</string>
    <string name="delete_study_plan">Delete Study program</string>
    <string name="delete_study_plan_hint">Are you sure you want to permanently delete your current Study program?</string>
    <string name="study_plan_deleted">Study program successfully eliminated</string>
    <string name="selected_dates_are_incompatibles">It is not possible to create a program with the chosen dates</string>
    <string name="dates_error">Error in choosing dates</string>
    <string name="year">" year "</string>
    <string name="of">"of "</string>
    <string name="master_degree">Master’s Degree</string>
    <string name="first_level_degree">Bachelor’s Degree</string>
    <string name="channel">"Channel: "</string>
    <string name="select_course">Select your course</string>
    <string name="available">Available</string>
    <string name="occupied">Occupied</string>
    <string name="not_available">Not available</string>
    <string name="lesson_timetable" translatable="false">%1$s - %2$s</string>
    <string name="alert_offline">You\'re offline. Please go online for updates.</string>
    <string name="lesson_data_updated">Data has been successfully updated!</string>
    <string name="lesson_data_update_wrong">Data can\'t be updated now. Please try again later.</string>
    <string name="updated_timetables_title">Updated timetables</string>
    <string name="updated_timetables_desc">You will find the list of timetables of Sapienza\'s courses. They are periodically updated and available also offline !</string>
    <string name="study_plan_title">Study program</string>
    <string name="study_plan_desc">Are you looking for a quiet place where to study at Sapienza? Create now your custom Study program and you will always know where to go and at what time !</string>
    <string name="class_info_title">Classroom detail</string>
    <string name="class_info_desc">Discover now the functionality classroom detail, here you can find out which one is available and get useful information about classrooms.</string>
    <string name="download_course_title">Downloading course</string>
    <string name="download_course_desc">Please wait for course download.</string>
    <string name="download_course_fail">Course has not been downloaded. Please try again leter.</string>
</resources>