<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="10dp"
    tools:context=".activities.FeedbackActivity">

    <LinearLayout
        android:id="@+id/main_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="10dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/write_here_your_feedback"
            android:textColor="?attr/textStyle"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/tell_us_what_you_think"
            android:textColor="#ca898585"
            android:textStyle="bold"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/user_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/back_gray"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:textColor="@android:color/black"
            android:minLines="4"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/nome_optional"
            android:textColor="#ea898585"
            android:textStyle="bold"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/back_gray"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/email_optional"
            android:textColor="#ea898585"
            android:textStyle="bold"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/back_gray"
            android:textColor="@android:color/black"
            android:maxLines="1"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp" />


    </LinearLayout>

</ScrollView>