<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/_10sdp"
    android:layout_marginEnd="@dimen/_10sdp"
    android:orientation="horizontal">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        app:cardBackgroundColor="#D3D3D3"
        app:cardCornerRadius="6dp"
        app:contentPadding="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="0dp"
                android:paddingEnd="@dimen/_32sdp"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/timeline_index"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_gravity="center"
                        android:background="@drawable/circle"
                        android:gravity="center"
                        android:textColor="@color/darkGray"
                        android:textSize="@dimen/_16sdp"
                        android:textStyle="bold" />

                </FrameLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/timeline_class"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/coolBlack"
                        android:singleLine="true"
                        android:textSize="@dimen/_14sdp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_3sdp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_from"
                            android:textColor="@color/darkGray"
                            android:textSize="@dimen/_12sdp" />

                        <TextView
                            android:id="@+id/start_hour"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/darkGray"
                            android:textSize="@dimen/_12sdp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_up_to_"
                            android:textColor="@color/darkGray"
                            android:textSize="@dimen/_12sdp" />

                        <TextView
                            android:id="@+id/end_hour"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/darkGray"
                            android:textSize="@dimen/_12sdp" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/info_building_btn"
                android:layout_width="@dimen/_27sdp"
                android:layout_height="@dimen/_27sdp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/image"
                android:background="?selectableItemBackgroundBorderless"
                android:src="@drawable/ic_info" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>