<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:orientation="horizontal">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_2sdp"
        android:contentDescription="@string/image"
        android:src="@drawable/circle_under_line"
        android:translationZ="@dimen/_10sdp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_120sdp"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        app:cardBackgroundColor="#ECB86D"
        app:cardCornerRadius="6dp"
        app:cardElevation="1dp"
        app:contentPadding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_20sdp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/timeline_class"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Aula P1"
                    android:textColor="@color/coolBlack"
                    android:paddingStart="0dp"
                    android:paddingEnd="@dimen/_32sdp"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/timeline_building"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/timeline_class"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:textColor="@color/darkGray"
                    android:text="Viale dell'universitá, 23"
                    android:paddingStart="0dp"
                    android:paddingEnd="@dimen/_32sdp"
                    android:textSize="@dimen/_12sdp" />

                <ImageView
                    android:id="@+id/info_building_btn"
                    android:layout_width="@dimen/_27sdp"
                    android:layout_height="@dimen/_27sdp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:clickable="true"
                    android:focusable="true"
                    android:contentDescription="@string/image"
                    android:background="?selectableItemBackgroundBorderless"
                    android:src="@drawable/ic_info" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_40sdp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/from"
                        android:textColor="@color/coolBlack"
                        android:textSize="@dimen/_14sdp" />

                    <TextView
                        android:id="@+id/start_hour"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:text="17:30"
                        android:textColor="@color/coolBlack"
                        android:textSize="@dimen/_15sdp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_40sdp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/up_to"
                        android:textColor="@color/coolBlack"
                        android:textSize="@dimen/_14sdp" />

                    <TextView
                        android:id="@+id/end_hour"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:text="21:15"
                        android:textColor="@color/coolBlack"
                        android:textSize="@dimen/_15sdp"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/_2sdp"
        android:contentDescription="@string/image"
        android:src="@drawable/circle_over_line"
        android:translationZ="@dimen/_10sdp" />

</RelativeLayout>